--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 <body>
   <div class="content">
     <article class="card">
-      <section class="image-container-mobile">
-        <img src='./images/image-header-mobile.jpg' />
-      </section>
-      <section class="card-content">
-        <h1>
+      <header class="image-container-mobile">
+        <img alt="Working businesswomen" src='./images/image-header-mobile.jpg' />
+      </header>
+      
+      <div class="card-content">
+        <h2>
           Get <span>insights</span> that help your business grow.
-        </h1>
+        </h2>
 
         <p class="card-description">
           Discover the benefits of data analytics and make better decisions regarding revenue, customer 
@@ -36,9 +37,10 @@
             <p><strong>12M+</strong> <span>queries</span></p>
           </div>
         </div>
-      </section>
+      </div>
+
       <aside class=image-container-desktop>
-        <img src="images/image-header-desktop.jpg" />
+        <img alt="Working businesswomen" src="images/image-header-desktop.jpg" />
       </aside>
     </article>
 
